refactor: new-reservation.js 코드 수정